<resources>
    <string name="app_name">DermalCheck</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Acceder</string>
    <string name="welcome">"¡Bienvenido!"</string>
    <string name="invalid_username">Usuario inválido</string>
    <string name="invalid_password">La contraseña debe tener al menos 5 caracteres</string>
    <string name="registration_success">Registro realizado correctamente</string>
    <string name="passwords_do_no_match">Las contraseñas no coinciden</string>
    <string name="login_failed">Usuario o contraseña incorrectos</string>
    <string name="email_already_registered">Email ya registrado</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="password_confirm">Confirmar contraseña</string>
    <string name="profile">Perfil</string>
    <string name="requests">Consultas</string>
    <string name="phototype">Fototipo</string>
    <string name="antecedents">Antecedentes</string>
    <string name="stain_localization">Localización de la mancha</string>
    <string name="my_statistics">Mis estadísticas</string>
    <string name="personal_atecedents">Antecedentes personales</string>
    <string name="familiar_antecedents">Antecedentes familiares</string>
    <string name="send_request">Enviar consulta</string>
    <string name="additional_data">Datos adicionales</string>
    <string name="pathologist_diagnostic">Diagnóstico del patólogo</string>
    <string name="analyze_image">Analizar imagen</string>
    <string name="image">Imagen</string>
    <string name="images">Imágenes</string>
    <string name="cancel">Cancelar</string>
    <string name="no_requests">No se encontraron consultas</string>
    <string name="patient_id">Id del paciente</string>
    <string name="notes">Notas</string>
    <string name="request_detail">Detalles de la consulta</string>
    <string name="new_request">Nueva consulta</string>
    <string name="request_created_successfully">Consulta creada correctamente</string>
    <string name="request_updated_successfully">Consulta actualizada correctamente</string>
    <string name="data_updated_successfully">Datos actualizados correctamente</string>
    <string name="error_updating_data">Ocurrió un error al actualizar la información. Por favor, inténtelo de nuevo más tarde</string>
    <string name="error_taking_photo">Ocurrió un error al intentar hacer la foto</string>
    <string name="error_estimating_diagnostic">Error en la estimación del diagnóstico, intente seleccionar otra imagen.</string>
    <string name="estimated_probability">Probabilidad estimada</string>

    <string name="required_field">Este campo es obligatorio</string>
    <string name="invalid_phototype">Fototipo inválido</string>
    <string name="error_no_images">Se debe subir al menos una imagen</string>
    <string name="error_no_stars">Se debe seleccionar al menos una estrella</string>
    <string name="error_no_diagnostic">El diagnóstico es obligatorio</string>
    <string name="error_no_images_selected">Se debe seleccionar al menos una imagen</string>
    <string name="error_no_sex">Seleccione un sexo.</string>
    <string name="error_creating_request">Ocurrió un error al crear la consulta. Por favor, inténtelo de nuevo más tarde</string>
    <string name="error_updating_request">Ocurrió un error al actualizar la consulta. Por favor, inténtelo de nuevo más tarde</string>
    <string name="choose_images">Seleccionar imágenes</string>
    <string name="choose_images_from_gallery">Seleccionar desde mi galería</string>
    <string name="choose_images_from_camera">Hacer foto</string>
    <string name="remaining_images_select">Selecciona hasta %1$d imágenes más.</string>
    <string name="select_new_images">Seleccionar nuevas imágenes</string>
    <string name="select_new_image">Seleccionar nueva imagen</string>
    <string name="age">Edad</string>
    <string name="you_won">Acertaste</string>
    <string name="you_lost">Fallaste</string>
    <string name="next_request">Siguiente consulta</string>
    <string name="no_pending_requests">No hay consultas pendientes de asignación</string>
    <string name="specialist_diagnostic_with_security"> El especialista dio su diagnóstico con un %1$d%% de seguridad.</string>


    <!-- DIAGNOSTIC LABELS -->
    <string name="label1">Queratosis actinica</string>
    <string name="label2">Carcinoma basocelular</string>
    <string name="label3">Lesiones similares a la queratosis benigna</string>
    <string name="label4">Dermatofibroma</string>
    <string name="label5">Melanoma</string>
    <string name="label6">Nevus melanocitico</string>
    <string name="label7">Lesiones vasculares cutaneas</string>
    <string name="label8">Carcinoma de células escamosas</string>
    <string name="label9">Desconocido</string>
    <!-- END DIAGNOSTIC LABELS -->


    <!-- BODY PARTS LABELS -->
    <string name="unknown">Desconocido</string>
    <string name="back">Espalda</string>
    <string name="lower_extremity">Extremidad inferior</string>
    <string name="trunk">Tronco</string>
    <string name="upper_extremity">Extremidad superior</string>
    <string name="abdomen">Abdomen</string>
    <string name="chest">Pecho</string>
    <string name="scalp">Cuero cabelludo</string>
    <string name="face">Cara</string>
    <string name="ear">Oreja</string>
    <string name="neck">Cuello</string>
    <string name="hand">Mano</string>
    <string name="foot">Pie</string>
    <string name="genital">Genitales</string>
    <!-- BODY PARTS -->

    <string name="review">Revisar</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="diagnose">Diagnosticar</string>
    <string name="diagnosed_requests">Consultas diagnosticadas</string>
    <string name="placeholder_diagnosed_requests">Consultas diagnosticadas: %1$d</string>
    <string name="placeholder_matching_diagnostics">Diagnósticos acertados: %1$d</string>
    <string name="placeholder_failed_diagnostics">Diagnósticos fallidos: %1$d</string>
    <string name="update_data">Actualizar Datos</string>
    <string name="select_a_diagnostic">Seleccione el diagnóstico</string>
    <string name="specialist_diagnostic">Diagnóstico del especialista</string>
    <string name="estimated_diagnostic">Diagnóstico estimado</string>
    <string name="diagnostic_pending">Pendiente de diagnosticar</string>
    <string name="select_a_body_part">Selecciona una parte del cuerpo</string>
    <string name="my_data">Mis datos</string>
    <string name="name">Nombre</string>
    <string name="nick">Alias</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="diagnostic_security">Seguridad del diagnóstico</string>
    <string name="diagnostic">Diagnóstico</string>
    <string name="diagnostics">Diagnósticos</string>
    <string name="action_register">Registarme</string>


</resources>