<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.GeneralMedicStatisticsFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/my_statistics"
        android:textColor="@color/main"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <app.futured.donut.DonutProgressView
        android:id="@+id/dpvStatisticsChart"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:donut_bgLineColor="@color/grey"
        app:donut_gapAngle="270"
        app:donut_gapWidth="20"
        app:donut_strokeWidth="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/dpvStatisticsChart"
        app:layout_constraintEnd_toEndOf="@+id/dpvStatisticsChart"
        app:layout_constraintStart_toStartOf="@+id/dpvStatisticsChart"
        app:layout_constraintTop_toTopOf="@+id/dpvStatisticsChart">

        <TextView
            android:id="@+id/tvRequestsDiagnosed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/diagnosed_requests"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvMatchingDiagnostics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawablePadding="8dp"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/placeholder_matching_diagnostics"
            app:drawableStartCompat="@drawable/ic_dot_success" />

        <TextView
            android:id="@+id/tvFailedDiagnostics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawablePadding="8dp"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/placeholder_matching_diagnostics"
            app:drawableStartCompat="@drawable/ic_dot_accent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>